# Automated-Machine-learning-for-Tabular-data

./: .gitignore  LICENSE  Member.txt  PERFORMANCE_SUMMARY.md  README.md  SS25_AutoML_Exam.txt  SUBMISSION_CHECKLIST.md  download-datasets.py  download-exam-dataset.py  pyproject.toml  requirements.txt  run.py  run_instructions.md  setup.py  team_info
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/exam_dataset/: predictions.npy
models/: .gitkeep  automl_model.pkl
results/bike_sharing_demand/: bike_sharing_demand_all_folds_results.json  bike_sharing_demand_fold_1.npy  bike_sharing_demand_fold_10.npy  bike_sharing_demand_fold_2.npy  bike_sharing_demand_fold_3.npy  bike_sharing_demand_fold_4.npy  bike_sharing_demand_fold_5.npy  bike_sharing_demand_fold_6.npy  bike_sharing_demand_fold_7.npy  bike_sharing_demand_fold_8.npy  bike_sharing_demand_fold_9.npy
results/brazilian_houses/: brazilian_houses_all_folds_results.json  brazilian_houses_fold_1.npy  brazilian_houses_fold_10.npy  brazilian_houses_fold_2.npy  brazilian_houses_fold_3.npy  brazilian_houses_fold_4.npy  brazilian_houses_fold_5.npy  brazilian_houses_fold_6.npy  brazilian_houses_fold_7.npy  brazilian_houses_fold_8.npy  brazilian_houses_fold_9.npy
results/exam_dataset/: exam_dataset_all_folds_results.json  predictions.npy
results/superconductivity/: superconductivity_all_folds_results.json  superconductivity_fold_1.npy  superconductivity_fold_10.npy  superconductivity_fold_2.npy  superconductivity_fold_3.npy  superconductivity_fold_4.npy  superconductivity_fold_5.npy  superconductivity_fold_6.npy  superconductivity_fold_7.npy  superconductivity_fold_8.npy  superconductivity_fold_9.npy
results/wine_quality/: wine_quality_all_folds_results.json  wine_quality_fold_1.npy  wine_quality_fold_10.npy  wine_quality_fold_2.npy  wine_quality_fold_3.npy  wine_quality_fold_4.npy  wine_quality_fold_5.npy  wine_quality_fold_6.npy  wine_quality_fold_7.npy  wine_quality_fold_8.npy  wine_quality_fold_9.npy
results/yprop_4_1/: yprop_4_1_all_folds_results.json  yprop_4_1_fold_1.npy  yprop_4_1_fold_10.npy  yprop_4_1_fold_2.npy  yprop_4_1_fold_3.npy  yprop_4_1_fold_4.npy  (+5 more)
(+3 files in other folders)
