[project]
name = "automl"
license = { file = "LICENSE" }
# Feel free to change from here
version = "0.1.0"
dependencies = [
    "scikit-learn",
    "openml",
    "pandas",
    "numpy",
    "IPython",
    "xgboost",
    "lightgbm",
    "catboost",
    "optuna",
    "scipy",
    "joblib",
    "tqdm",
    "requests",
    "pyarrow",
    "fastparquet"
]
requires-python = ">=3.10"
authors = [{ name = "user", email = "user@user.com" }]
readme = "README.md"
description = "Advanced AutoML SS25 Exam - Tabular with Multi-Fidelity Optimization and Meta-Learning"
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "pre-commit"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"